syntax = "proto3";

package discounts;

message ProductDiscountRequest {
  string userId = 1;
  string productId = 2;
}

message ProductDiscountResponse {
  string id = 1;
  int64 priceInCents = 2;
  string title = 3;
  string description = 4;
  message Discount {
    float percentage = 1;
    int64 valueInCents = 2;
  }
}

service ProductDiscountService {
  rpc GetProductDiscount (ProductDiscountRequest) returns (ProductDiscountResponse);
}

